$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.6-12 (opened Feb 9, 2009)

	* contribdiv: new functions for contribution diversity as an
	alternative to simple additive diversity following Lu, Wagner &
	Chen, Basic and Applied Ecology 8, 1-12 (2007).
	
Version 1.6-11 (closed Feb 9, 2009)

	* anova.cca: used different random number sequence for the second
	term with by = "margin". 

	* ordirgl & orgltext: removed work arounds for very old versions
	(pre-0.65) of the rgl package.

Version 1.6-10 (closed Jan 28, 2009)

	* commsimulator: failed if input data (x) were a data.frame.

	* metaMDS: really do not evaluate no.shared() if set
	noshare=0. Triggered by a problem report with missing data. 

	* vegdist doc: Morisita and Horn-Morisita were given as
	similarities in the help.

	* ordirgl: fixed wrong warnings in ordirgl(..., type="t"). 

	* kendall.post, kendall.global: knows now all P value adjustment
	methods of 'p.adjust()' plus "sidak".
	
Version 1.16-9 (closed Jan 20, 2009)
	
	* kendall.post: added one line that was accidentally lost in
	editing. 

	* Checked with R version 2.9.0 Under development (unstable) 
	(2009-01-13 r47593) having experimental strict Rd parser, and
	corrected the reported problems in Rd files so that vegan is R
	2.9.0-ready. 

	* adonis: uses now canonical (hits+1)/(tries+1) for P-values
	instead of hits/tries. Default number of permutations increased
	from 5 to 999. Added terms component so that things like update()
	and drop.scope() magically started to work. Renamed design.matrix
	into model.matrix (and documented the item). 

	* permatswap: new algorithm "swsh" is added to keep row/column
	incidences (but not sums) constant. The name refers to the two
	steps: (1) binary *sw*aps are made then (2) individuals in
	non-zero cells are *sh*uffled.

	* permat methods: calculations of the Chi-squared statistic is
	added to summary, and the type argument can be used in the plot
	"bray" or "chisq" values.
